# kaminari

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
competitors/: get_salmonella_4546_genomes.sh
example/: download_test_datasets.sh  one_query.fasta  two_queries_result.txt
include/: GGCAT.hpp  array_mapper.hpp  build.hpp  build_options.hpp  codes.hpp  colormapper.hpp  colorsets.hpp  compact_vector.hpp  constants.hpp  ext_bit_parser.hpp  ext_bit_vector.hpp  hybrid.hpp  index.hpp  io_adaptor.hpp  minimizer.hpp  mmap.hpp  query.hpp  query_options.hpp  rbo.hpp  sort_mapper.hpp  sort_union_mapper.hpp  utils.hpp
include/index/: index.hpp  index_build.hpp  index_build_metage.hpp
include/index/io/: index_save.hpp
include/index/psa/: ranking_threshold_union_query.hpp
include/psa/: ranking_threshold_union_query.hpp  threshold_union_query.hpp
include/query/: colorsets_accessor.hpp  minimizer.hpp  query.hpp  query_options.hpp  ranking_threshold_union_query.hpp
scripts/: download_test_datasets.sh  subsample_filenames.py
src/: GGCAT.cpp  build.cpp  colorsets_accessor.cpp  constants.cpp  ext_bit_parser.cpp  hybrid.cpp  index.cpp  kaminari.cpp  query.cpp  rbo.cpp  test.cpp  utils.cpp
src/parallel/: batch.cpp  tasks.cpp
src/psa/: full_intersection_query.cpp  ranking_threshold_union_query.cpp  threshold_union_query.cpp
